# POO

./: .gitattributes  CMakeLists.txt
Examen_2/Examen/: Curicula.cpp  Curicula.h  Disciplina.cpp  Disciplina.h  Exceptie.cpp  Exceptie.h  Persoana.cpp  Persoana.h  Profesor.cpp  Profesor.h  Student.cpp  Student.h  main.cpp
Examen_2/Examen_2.xcodeproj/: project.pbxproj
Examen_2/Mode_2/: Curicula.cpp  Curicula.h  Disciplina.cpp  Disciplina.h  Exceptie.cpp  Exceptie.h  Persoana.cpp  Persoana.h  Profesor.cpp  Profesor.h  Student.cpp  Student.h  file.txt  main.cpp
Examen_2/Model/: Curicula.cpp  Curicula.h  Disciplina.cpp  Disciplina.h  Exceptie.cpp  Exceptie.h  Persoana.cpp  Persoana.h  Profesor.cpp  Profesor.h  Student.cpp  Student.h  main.cpp
Examen_2/Model_3/: Curicula.cpp  Curicula.h  Disciplina.cpp  Disciplina.h  Exceptie.cpp  Exceptie.h  Persoana.cpp  Persoana.h  Profesor.cpp  Profesor.h  Student.cpp  Student.h  main.cpp
Examen_2/Model_Jenea/: Curicula.cpp  Curicula.h  Disciplina.cpp  Disciplina.h  Exceptie.cpp  Exceptie.h  Persoana.cpp  Persoana.h  Profesor.cpp  Student.cpp  Student.h  main.cpp  sex.txt
Examen_2/Model_Rezolvat/: main.cpp
Lab_02/EXEMPLU_Student/: Student.cpp  Student.h  main.cpp
Lab_02/Student/: Student.cpp  Student.h  main.cpp
Lab_02/User/: User.cpp  User.h  main.cpp
Lab_03/: main.cpp  punct.cpp  punct.h  triunghi.cpp  triunghi.h
Lab_05/: main.cpp  punct.cpp  punct.h  triunghi.cpp  triunghi.h
Lab_06/: Complex.cpp  Complex.h  main.cpp
Multime_2/: Multime.cpp  Multime.h  main.cpp
Teorie/: Subiect 4.odt  Thumbs.db  subiect 2.rtf  subiect 3.rtf  subiect 5.odt
Test/Aniaml/: Aniaml.cpp  Aniaml.h  main.cpp
Test/Country/: Country.cpp  Country.h  main.cpp
Test/Human/: Human.cpp  Human.h  main.cpp
Test/Laptop/: Laptop.cpp  Laptop.h  main.cpp
Test/Masina/: Masina.cpp  Masina.h  main.cpp
Test/MySegment/: MySegment.cpp  MySegment.h  main.cpp
Test/Patrat/: Patrat.cpp  Patrat.h  main.cpp
Test/Student/: Student.cpp  Student.h  main.cpp
Test/Vector/: Vector.cpp  Vector.h  main.cpp
Test/xyz/: main.cpp  xyz.cpp  xyz.h
Test_II/Complex/: Complex.cpp  Complex.h  main.cpp
Test_II/Matrix/: Matrix.cpp  Matrix.h  main.cpp
Test_II/MyStack/: main.cpp  myStack.cpp  myStack.h
Test_II/MyString/: MyString.cpp  MyString.h  main.cpp
Test_II/Persoana_2/: Exceptie.h  (+7 more)
(+6 files in other folders)
